--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "multer": "^1.4.3"
   },
   "repository": {
     "type": "git",
